--- a/popup.css
+++ b/popup.css
@@ -1,7 +1,14 @@
 body {
   background-color: darkslategray;
+  background-image: url(images/waterfall_1080.gif);
+  background-size: cover;
 }
-
+.on {
+  background-color: rgb(17, 158, 139);
+}
+.off {
+  background-color: brown;
+}
 button {  
   height: 30px; 
   width: 30px;  
@@ -13,48 +20,7 @@ button {
 button.current {  
   box-shadow: 0 0 0 2px white,              0 0 0 4px rgb(50, 149, 156);
 }
-input:checked + .slider:before {
-  -webkit-transform: translateX(26px);
-  -ms-transform: translateX(26px);
-  transform: translateX(26px);
-}
-input:checked + .slider {
-  background-color: #2196F3;
-}
-.slider:before {
-  position: absolute;
-  content: "";
-  height: 26px;
-  width: 26px;
-  left: 4px;
-  bottom: 4px;
-  background-color: white;
-  -webkit-transition: .4s;
-  transition: .4s;
-}
-.slider {
-  position: absolute;
-  cursor: pointer;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: #ccc;
-  -webkit-transition: .4s;
-  transition: .4s;
-}
-.switch input {
-  opacity: 0;
-  width: 0;
-  height: 0;
-}
-.switch {
-  position: relative;
-  display: inline-block;
-  width: 60px;
-  height: 34px;
-  border-radius: 15px;
-}
+
 
 div#timeButtons {
   position: relative;
