--- a/popup.css
+++ b/popup.css
@@ -1,11 +1,28 @@
 body {
-  background-color: darkslategray;
-  background-image: url(images/waterfall_1080.gif);
-  background-size: cover;
+  color: black;
+  background-color: #93b9bc;
 }
-/* .displayStatus {
-  display: none;
-} */
+
+body.darkMode {
+  background-image: url("images/1080_waterfall_darkmode.gif");
+  background-size: contain;
+  background-repeat: no-repeat;
+  position: static;
+  z-index: 0;
+  width: 440px;
+  color:white;
+}
+
+
+body.lightMode {
+  background-image: url("images/1080_waterfall_lightmode.gif");
+  background-size: contain;
+  background-repeat: no-repeat;
+  position: static;
+  z-index: 0;
+  width: 440px;
+  color: black;
+}
 .on {
   background-color: rgb(17, 158, 139);
 }
