--- a/popup.css
+++ b/popup.css
@@ -28,19 +28,23 @@ div.lightMode {
 } */
 .on {
   background-color: rgb(17, 158, 139);
+  color: rgb(161, 238, 161);
+  text-shadow: 1px 2px 10% greenyellow;
 }
 .off {
-  background-color: brown;
+  background-color: #302b33;
+  color: rgb(176, 245, 230);
+  text-shadow: 1px 2px 5px #dca873;
 }
-
+#darkModeButton {
+  background-color: #302b33;
+  color: rgb(176, 245, 230);
+  text-shadow: 1px 2px 5px #dca873;
+}
 
 button#fiveMin {  
   background-color: indianred;
 }
-button.current {  
-  box-shadow: 0 0 0 2px white,              0 0 0 4px rgb(50, 149, 156);
-}
-
 
 div#timeButtons {
   position: relative;
@@ -49,7 +53,7 @@ div#timeButtons {
 
 button {
   flex-shrink: 2;
-  font-family: 'Oi';
+  font-family: 'Jura';
   letter-spacing: 2px;
   width: 50%;
   
