--- a/popup.css
+++ b/popup.css
@@ -37,9 +37,17 @@ div.lightMode {
   text-shadow: 1px 2px 5px #dca873;
 }
 ul#displayDomains {
-  float: right;
+  float: left;
+  list-style: square;
+  list-style-image:url(images/pixel_waterfall_16.png) ;
 }
-
+span#displayDomainSpan{
+  display: flex;
+  float: right;
+  flex-direction: column;
+  max-width: 200px;
+  max-height: 300px;
+}
 button#fiveMin {  
   background-color: indianred;
 }
