--- a/popup.css
+++ b/popup.css
@@ -22,15 +22,16 @@ div.lightMode {
 .on {
   background-color: rgb(17, 158, 139);
   color: rgb(161, 238, 161);
-  text-shadow: 1px 2px 10% rgb(65, 47, 82);
 }
 .off {
   width: 15%;
   background-color: #302b33ce;
   color: rgb(176, 245, 230);
-  text-shadow: 1px 2px 5px #dca873;
 }
 div#settingsDisplay{
+  display: flex;
+  border: 5px white;
+  flex-flow: column wrap;
   background-color: black;
   color:wheat;
   font-family: 'Press Start 2P', cursive;
