--- a/popup.css
+++ b/popup.css
@@ -1,3 +1,12 @@
+div#titleScreen{
+  height: 400px;
+  width: 440px;
+}
+h1#title{
+  font-family: 'Press Start 2P', cursive;
+  color:hsl(0, 0%, 100%);
+  opacity: 80%;
+}
 div.darkMode {
   background-image: url("images/1080_waterfall_darkmode.gif");
   background-size: contain;
@@ -24,8 +33,9 @@ div.lightMode {
   color: rgb(161, 238, 161);
 }
 .off {
-  width: 15%;
-  background-color: #302b33ce;
+  width: auto;
+  height: 40px;
+  background-color: #706477ce;
   color: rgb(176, 245, 230);
 }
 div#settingsDisplay{
