--- a/popup.css
+++ b/popup.css
@@ -7,6 +7,12 @@ h1#title{
   color:hsl(0, 0%, 100%);
   opacity: 80%;
 }
+div.titleScreenButtons{
+  display: flex;
+  flex-direction: row;
+  position: sticky;
+  bottom: 0;
+}
 div.darkMode {
   background-image: url("images/1080_waterfall_darkmode.gif");
   background-size: contain;
@@ -29,10 +35,14 @@ div.lightMode {
   background-color: #93b9bc;
 }
 .on {
+  margin: 2px;
+  width: auto;
+  height: 40px;
   background-color: rgb(17, 158, 139);
   color: rgb(161, 238, 161);
 }
 .off {
+  margin: 2px;
   width: auto;
   height: 40px;
   background-color: #706477ce;
