--- a/popup.css
+++ b/popup.css
@@ -2,7 +2,7 @@ div#titleScreen{
   height: 400px;
   width: 440px;
 }
-h1#title{
+h1#titleH1{
   font-family: 'Press Start 2P', cursive;
   color:hsl(0, 0%, 100%);
   opacity: 80%;
