--- a/popup.css
+++ b/popup.css
@@ -7,6 +7,49 @@ h1#titleH1{
   color:hsl(0, 0%, 100%);
   opacity: 80%;
 }
+div.popup {
+  position: relative;
+  display: inline-block;
+  cursor: pointer;
+}
+.popup .popupText {
+  visibility: hidden;
+  width: 160px;
+  background-color: #555;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 8px 0;
+  position: absolute;
+  z-index: 1;
+  bottom: 125%;
+  left: 50%;
+  margin-left: -80px;
+}
+.popup .popuptext::after {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  margin-left: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: #555 transparent transparent transparent;
+}
+.popup .show {
+  visibility: visible;
+  -webkit-animation: fadeIn 1s;
+  animation: fadeIn 1s
+}
+@-webkit-keyframes fadeIn {
+  from {opacity: 0;}
+  to {opacity: 1;}
+}
+
+@keyframes fadeIn {
+  from {opacity: 0;}
+  to {opacity:1 ;}
+}
 div.titleScreenButtons{
   display: flex;
   flex-direction: row;
@@ -16,6 +59,10 @@ div.titleScreenButtons{
 div.card-header{
   padding: 2px;
   background-color: #484e71;
+}
+div.card-body-darkMode{
+  background-color: rgb(41, 39, 53);
+  color: white;
 }
 div.darkMode {
   background-image: url("images/1080_waterfall_darkmode.gif");
