fix some styling issues on notif setting card

--- a/popup.css
+++ b/popup.css
@@ -153,8 +153,8 @@ input.radio{
   margin: 5px;
   float: right;
 } */
-span.notifLabels{
-  float: left;
+label.notifBtn{
+  float: right;
 }
 .textInput {
   float: right;
